Module4-Analytics : Improve API Calling Method